# test-app

poetry/: pyproject.toml
poetry/src/test1/test2/test3/: __main__.py  database.py  web.py
poetry/tests/: conftest.py  test_module.py
setuptools/: setup.cfg  setup.py
setuptools/src/test1/test2/test3/: app.py
setuptools/tests/: test_module.py
