[metadata]
name =  test1.test2.test3
version =  0.0.1
description = test

author = test

[options]
python_requires = >= 3.8

package_dir=
    =src

packages=find_namespace:

install_requires =
    aiohttp == 3.7.4.post0
    asyncpg == 0.23.0

[options.extras_require]
tests =
    pytest >=6.0, <7.0
    pytest-asyncio >= 0.15.0, <1.0.0
    pytest-mypy >=0.8.1, <1.0

[options.packages.find]
where=src

[tool:pytest]
addopts = -p no:cacheprovider --verbose --mypy

[mypy]
ignore_missing_imports = true